@@ -4,8 +4,9 @@ Grok changes
 1.1 (unreleased)
 ================
 
-- Nothing changed yet.
-
+* `create_application` now raises a `KeyError`, in cases of key
+  duplication, to match the ``zope.container`` behavior. Tests have
+  been adapted accordingly.
 
 1.1rc1 (2010-02-25)
 ===================
